--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
-
-
+.app{
+    position: relative;
+}
 
 #header {
     position: absolute;
@@ -33,13 +34,14 @@
 
 .header-navbar {
     height: 64px;
-    padding: 0 15px;
+    margin: 0 15px;
     font-size: 1.6rem;
     font-weight: 400;
     display: flex;
     align-items: center;
     letter-spacing: 2px;
 }
+
 
 .header-nav {
     display: flex;
@@ -289,11 +291,9 @@
 }
 
 .option-package-info {
-    justify-content: space-around;
-    display: flex;
+    
     flex: 1;
     padding: 15px;
-    flex-direction: column;
 }
 
 
@@ -303,6 +303,7 @@
 }
 
 .option-package-info-destination {
+    margin-top: 14px;
     font-size: 1.6rem;
     display: flex;
     justify-content: flex-start;
@@ -316,6 +317,7 @@
 }
 
 .option-package-info-btn {
+    margin-top: 22px;
     border: none;
     text-align: center;
     font-size: 1.6rem;
@@ -324,29 +326,7 @@
     color: var(--white-color);
 }
 
-.package-info-btn-berlin{
-    background:linear-gradient(to right, #ffd205 0%, #ff9b05 100%);
-}
 
-.package-info-btn-hongkong{
-    background: linear-gradient(to right, #f76570 0%, #f78d65 100%);
-}
-
-.package-info-btn-sanfranco{
-    background: linear-gradient(to right, #ba71da 0%, #da717b 100%);
-}
-
-.package-info-btn-tuscany{
-    background: linear-gradient(to right, #1bbc9b 0%, #1bbc63 100%);
-}
-
-.package-info-btn-amsterdam{
-    background: linear-gradient(to right, #f3a46b 0%, #f3c96b 100%);
-}
-
-.package-info-btn-phuket{
-    background: linear-gradient(to right, #14b9d5 0%, #14d5b1 100%);
-}
 
 /* .header-option-europe{
     margin: 15px;
@@ -453,11 +433,11 @@
 
 .background-img-rgba{
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     left: 0;
-    z-index: 1;
+    top: 0;
+    z-index: -1;
     background: linear-gradient(to bottom , rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.25));
 }
 
@@ -485,6 +465,7 @@
 /* slider begin */
 
 .slider{
+    position: relative;
     width: 100%;
     top: 0;
     max-height: 972px;
@@ -496,6 +477,7 @@
 }
 
 .slider__container{
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -524,27 +506,51 @@
   
 
 .slider__input {
+    position: relative;
     min-width: 370px;
     background-color: #fff;
     border-radius: 20px;
     min-height: 40px;
     display: flex;
     align-items: center;
-    overflow: hidden;
-    position: relative;
     margin: 70px 0;
     color: var(--text-color);
 }
 
+.slider__input-text:focus ~ .slider-history{
+    display: block;
+}
+
+.slider-history{
+    display: none;
+    position: absolute;
+    top: 110%;
+    background-color: #fff;
+    width: 100%;
+    border: 1px solid #363636;
+}
+
+.slider-history__item{
+    padding: 6px 28px;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    display: flex;
+    align-items: center;
+}
+
+.slider-history__item-icon{
+    font-size: 1rem;
+    margin-right: 4px;
+}
+
 .slider__input-btn,
 .slider__input-text {
-    font-size: 1.5rem;
-    
+    font-size: 1.6rem;
+    color: var(--text-color);
 }
 
 .slider__input-text {
     flex: 1;
-    font-size: 1.5rem;
     padding: 13px 28px;
 }
 
@@ -623,4 +629,671 @@
 
 .destination-unitedStates{
     background: url(../img/img-destination-famous/unitedState.jpg) top center / contain no-repeat;
+}
+
+/* your Holiday */
+
+.yourHoliday{
+    margin-top: 60px;
+    margin-bottom: 75px;
+    position: relative;
+    padding-top: calc(100% / 6);
+    background: url(../img/img-yourHoliday/your-holiday.jpg) center / cover no-repeat;
+}
+
+.yourHoliday__container{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    background: linear-gradient(to bottom , rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.25));
+}
+
+.yourHoliday--wrapper-box{
+    margin: auto;
+}
+
+
+.yourHoliday-title {
+    font-size: 5rem;
+    line-height: 5.4rem;
+    color: var(--white-color);
+    font-weight: 600;
+    padding-left: 46%;
+}
+
+.yourHoliday-subtitle{
+    position: relative;
+    z-index: 1;
+}
+
+.yourHoliday-btn{
+    margin-left: 48px;
+    max-width: 240px;
+    letter-spacing: 1px;
+    background: var(--white-color);
+    color: #f87293;
+}
+
+/* best beaches */
+.header-beaches-package-description,
+.header-beaches-package-subtitle{
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+    color: var(--text-color);
+}
+
+.header-beaches-package-subtitle{
+    text-transform: uppercase;
+}
+
+.header-beaches-package-title{
+    color: var(--title-color);
+    font-size: 4rem;
+    line-height: 4.2rem;
+    font-weight: 700;
+    margin-top: 24px;
+}
+
+.text--underline-beaches{
+    background-color: #14b9d5;
+}
+
+.header-beaches-package-main-title{
+    position: relative;
+    z-index: 1;
+}
+
+.header-beaches-package-description{
+    padding-right: 20px;
+    line-height: 3rem;
+    /* padding-right: px; */
+    text-align: justify;
+}
+
+
+.bestBeaches-price__new,
+.bestBeaches-price__previous,
+.bestBeaches-price__icon-dollar {
+    font-size: 3rem;
+    letter-spacing: 2px;
+    line-height: 3.2rem;
+}
+
+.bestBeaches-price__previous {
+    margin-right: 6px;
+    color: var(--text-color);
+    text-decoration: line-through;
+}
+
+
+.bestBeaches-price__new,
+.bestBeaches-price__icon-dollar{
+    color: var(--title-color);
+}
+
+.bestBeaches-price__icon-dollar {
+    margin: 0 6px;
+}
+
+.bestBeaches-price__desc {
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    color: var(--text-color);
+}
+
+.bestBeaches-price__divided {
+    font-size: 2.2rem;
+    color: var(--text-color);
+    margin-right: 6px;
+}
+
+.beaches-btn {
+    background: #1bbc9b;
+    display: inline-block;
+    margin-top: 40px;;
+}
+
+/* slider beaches img */
+.slider-beaches__imgs,
+.beaches-famous {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.beaches-famous {
+    position: relative;
+}
+
+.slider-beaches{
+    display: none;
+}
+
+.slider-beaches__imgs{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 100%;
+    overflow: hidden;
+}
+
+.slider-beaches__imgs img{
+    width: 100%;
+    max-height: 460px;
+    float: left;
+    object-fit: cover;
+    animation: showSliderBeaches linear 1s;
+}
+
+@keyframes showSliderBeaches {
+    from{
+        opacity: 0.2;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+
+.slider-beaches__dots{
+    position: absolute;
+    top: 20px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    transition: 0.35s ease-in-out;
+}
+
+.slider-beaches__dot + .slider-beaches__dot{
+    margin-left: 20px;
+}
+
+.slider-beaches__dot{
+    display: block;
+    width: 62px;
+    height: 4px;
+    padding: 3px 0;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+
+
+#slider-beaches1:checked ~ .slider-beaches__imgs  > .slider-beaches__img:nth-child(2),
+#slider-beaches1:checked ~ .slider-beaches__imgs  > .slider-beaches__img:nth-child(3),
+#slider-beaches2:checked ~ .slider-beaches__imgs  > .slider-beaches__img:nth-child(1),
+#slider-beaches2:checked ~ .slider-beaches__imgs  > .slider-beaches__img:nth-child(3),
+#slider-beaches3:checked ~ .slider-beaches__imgs  > .slider-beaches__img:nth-child(2),
+#slider-beaches3:checked ~ .slider-beaches__imgs  > .slider-beaches__img:nth-child(1){
+    display: none;
+}
+
+#slider-beaches1:checked ~ .slider-beaches__imgs  > .slider-beaches__img,
+#slider-beaches2:checked ~ .slider-beaches__imgs  > .slider-beaches__img,
+#slider-beaches3:checked ~ .slider-beaches__imgs  > .slider-beaches__img{
+    display: block;
+}
+
+#slider-beaches1:checked ~ .slider-beaches__dots > .slider-beaches__dot:nth-child(1),
+#slider-beaches2:checked ~ .slider-beaches__dots > .slider-beaches__dot:nth-child(2),
+#slider-beaches3:checked ~ .slider-beaches__dots > .slider-beaches__dot:nth-child(3){
+    background-color: var(--white-color);
+}
+
+.timeRemaining-beaches{
+    position: absolute;
+    transform: translate(30.5%,50%);
+    bottom: 0;
+    padding: 20px;
+    min-width: 490px;
+    background-color: #14b9d5;
+}
+
+
+.timeRemaining-title,
+.timeRemaining-number{  
+    color: var(--white-color);
+    letter-spacing: 2px;
+    display: block;
+    padding: 4px 0;
+    text-align: center;
+}
+
+
+.timeRemaining-number{  
+    font-size: 4rem;
+    line-height: 4rem;
+}
+
+
+.timeRemaining-title{
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+}
+
+
+/* type Of tourism */
+
+.typeOfTourism{
+    margin-top: 100px;  
+}
+
+.typeOfTourism-box{
+    display: flex;
+}
+
+.typeOfTourism__heading {
+    font-size: 2.6rem;
+    line-height: 2.8rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: var(--title-color);
+}
+
+.typeOfTourism__box-img img{
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+}
+
+.typeOfTourism__reas-full{
+    font-size: 1.8rem;
+    color: #14b9d5;
+}
+
+/* discover */
+.discover{
+    margin: 60px 0;
+}
+
+.discover__container-main{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.discover__container{
+    width: 100%;
+    min-height: 270px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+}
+
+.discover__container-box{
+    width: 50%;
+}
+
+.discover--cities{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(../img/img-discover/cities.jpg);
+}
+
+.discover--cities-color{
+    color: #f3a46b;
+}
+
+.discover--nature{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(../img/img-discover/nature.jpg);
+}
+
+.discover--nature-color{
+    color: #1bbc9b;
+}
+
+.discover__heading-subtitle{
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    color: var(--white-color);
+}
+
+.discover__heading-title{
+    margin-top: 20px;
+    margin-bottom: 40px;
+    font-size: 4rem;
+    letter-spacing: 1px;
+    line-height: 4rem;
+    font-weight: 600;
+    color: var(--white-color);
+}
+
+.discover__btn{
+    display: inline-block;
+    letter-spacing: 2px;
+    line-height: 1.6rem;
+    font-size: 1.4rem;
+    border-radius: 40px;
+    padding: 15px 35px;
+    background: var(--white-color);
+}
+
+/* our Packages */
+
+.ourPackages__box{
+    width: 100%;
+}
+
+.text--underline-ourPackages{
+    color: #1bbc63;
+}
+
+.ourPackages__contianer{
+    position: relative;
+    margin: 60px 0;
+    border: 1px solid #efefef;
+}
+
+.ourPackages__img {
+    position: relative;
+    width: 100%;
+}
+
+.ourPackages__img img{
+    display: inherit;
+    width: 100%;
+    object-fit: cover;
+}
+
+.ourPackages__body{
+    position: relative;
+    padding:15px 30px;
+}
+
+.ourPackages__body-box{
+    padding: 15px 0;
+}
+
+.ourPackages__body-box:nth-child(2){
+    border-bottom: 1px solid #efefef;
+    border-top: 1px solid #efefef;
+}
+
+.ourPackages__body-box-price {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.ourPackages__body-price-subtitle {
+    position: relative;
+    display: flex;
+    align-items: stretch;
+    line-height: 1.3rem;
+    letter-spacing: 3px;
+    color: var(--title-color);
+    font-size: 1.3rem;
+    text-transform: uppercase;
+}
+
+.ourPackages__body-price-subtitle + .ourPackages__body-price-subtitle{
+    margin-top: 6px;
+}
+
+
+.ourPackages-price__icon-dollar,
+.ourPackages-price__new{
+    font-size: 2.6rem;
+    line-height: 2.6rem;
+    color: var(--title-color);
+}
+
+.ourPackages-price__previous{
+    font-size: 2.2rem;
+    line-height: 2.2rem;
+    color: var(--text-color);
+    text-decoration: line-through;
+}
+
+.ourPackages-price__new{
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
+.ourPackages-num{
+    color: var(--white-color);
+    padding: 1px 7px 2px 8px;
+    border-radius: 30px;
+    font-size: 1rem;
+    line-height: 1.2rem;
+    letter-spacing: 2px;
+    margin-left: 12px;
+}
+
+.ourPackages__btn{
+    display: inline-block;
+    font-size: 1.6rem;
+    color: var(--white-color);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 5px;
+    margin-bottom: 30px;
+}
+
+.ourPackages__img-icon{
+    position: absolute;
+    right: 20px;
+    top: 0;
+    transform: translateY(-50%);
+    z-index: 1;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.ourPackages__img-icon img{
+    width: 25px;
+}
+
+.ourPackages__sale{
+    font-size: 1.2em;
+    line-height: 1.2rem;
+    text-transform: uppercase;
+    color: var(--white-color);
+    letter-spacing: 1px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: var(--title-color) ;
+    padding: 6px 12px 5px;
+    border-radius: 20px;
+}
+
+/* footer */
+
+.footer{
+    width: 100%;
+    float: left;
+    min-height: 670px;
+    background-image: url(../img/img-footer/footer.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.footer__container-top-box{
+    margin: 60px 0;
+}
+
+.form-control{
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.form-control__input{
+    margin-right: 10px;
+}
+
+.form-control__input input{
+    background-color: var(--white-color);
+    border-radius: 30px ;
+    padding: 15px 20px ;
+    min-width: 230px;
+    font-size: 1.6rem;
+    color: var(--text-color);
+}
+
+.footer__btn{
+    margin: 0;
+    margin-left: 10px;
+    background-color: #14b9d5;
+    letter-spacing: 2px;
+}
+
+.footer__container-bottom{
+    background-color: var(--white-color);
+    padding: 30px;
+}
+
+.footer__container-bottom-box{
+    padding: 20px;
+}
+
+.footer-logo-img{
+    max-width: 150px;
+    height: 35px;
+    object-fit: cover;
+}
+
+.footer-link__item{
+    display: inline-block ;
+    color: var(--title-color);
+    font-size: 2.6rem;
+}
+
+.footer-description{
+    font-size: 1.6rem;
+    line-height: 3rem;
+    letter-spacing: 1px;
+    padding-right: 20px;
+    color: var(--text-color);
+}
+
+.footer-link__item + .footer-link__item{
+    margin-left: 15px;
+}
+
+.footer__superMenu-item {
+    min-height: 30px;
+    display: flex;
+    align-items: flex-end;
+}
+
+
+.footer-superMenu__title {
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin-top: 14px;
+    color: var(--title-color);
+    letter-spacing: 2px;
+    display: block;
+}
+
+.footer-superMenu__subtitle {
+    font-size: 1.6rem;
+    line-height: 1.4rem;
+    letter-spacing: 1px;
+    color: var(--text-color);
+}
+
+.footer-superMenu__icon{
+    margin-right: 15px;
+    line-height: 1.5rem;
+    color: var(--text-color);
+}
+
+.footer-banner{
+    padding: 15px;
+    background-color: #14b9d5;
+
+}
+
+
+.footer-banner__title{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: var(--white-color);
+    letter-spacing: 2px;
+}
+
+.footer-banner--left{
+    float: left;
+}
+
+.footer-banner--right{
+    float: right;
+}
+
+
+.price-hot{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 10;
+}
+
+
+.price-hot__box{
+    background-color: #545454;
+    color: var(--white-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.price-hot__box-price{
+    font-size: 2.4rem;
+    letter-spacing: 2px;
+    width: 65px;
+    height: 65px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+
+}
+
+.price-hot__box-envira {
+    position: absolute;
+    font-size: 1.5rem;
+    width: 35px;
+    height: 35px;
+    top: 50%;
+    left: 0;
+    transform: translateX(-70%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+
+}
+
+
+.price-hot__buy-now{
+    position: absolute;
+    top: 1px;
+    left: 5px;
+}
+
+.price-hot__buy-now-container{
+    background-color: #F76570;
+    padding: 3px 5px;
+    font-size: 1rem;
+    line-height: 1rem;
+    color: var(--white-color);
+    text-transform: uppercase;
 }
